fix: hide scrollbar

--- a/src/bootstrap/app.scss
+++ b/src/bootstrap/app.scss
@@ -52,6 +52,7 @@ body,
   background: $background;
   display: flex;
   flex-direction: column;
+  min-height: 90vh;
   overflow: auto;
   position: relative;
 }
